// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should disable delete icon while loading 1`] = `
<div
  className="root_disabled"
>
  <div
    className="thumbnailContainer"
    to="/product.html"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="www.venia.com/p1"
        srcSet="www.venia.com/p1 40w,
www.venia.com/p1 80w,
www.venia.com/p1 160w,
www.venia.com/p1 320w,
www.venia.com/p1 640w,
www.venia.com/p1 960w,
www.venia.com/p1 1280w,
www.venia.com/p1 1600w,
www.venia.com/p1 2560w"
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product.html"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty :"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    className="deleteButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render correctly 1`] = `
<div
  className="root"
>
  <div
    className="thumbnailContainer"
    to="/product.html"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="www.venia.com/p1"
        srcSet="www.venia.com/p1 40w,
www.venia.com/p1 80w,
www.venia.com/p1 160w,
www.venia.com/p1 320w,
www.venia.com/p1 640w,
www.venia.com/p1 960w,
www.venia.com/p1 1280w,
www.venia.com/p1 1600w,
www.venia.com/p1 2560w"
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product.html"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty :"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    className="deleteButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render correctly with out of stock product 1`] = `
<div
  className="root"
>
  <div
    className="thumbnailContainer"
    to="/product.html"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="www.venia.com/p1"
        srcSet="www.venia.com/p1 40w,
www.venia.com/p1 80w,
www.venia.com/p1 160w,
www.venia.com/p1 320w,
www.venia.com/p1 640w,
www.venia.com/p1 960w,
www.venia.com/p1 1280w,
www.venia.com/p1 1600w,
www.venia.com/p1 2560w"
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product.html"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty :"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    Out-of-stock
  </span>
  <button
    className="deleteButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;
